@@ -57,7 +57,7 @@ buildconf:
   git_signtag_opt: '-s'
 
 var:
-  torbrowser_version: '11.0a5'
+  torbrowser_version: '11.0a6'
   torbrowser_build: 'build1'
   torbrowser_incremental_from:
     - 11.0a4
