@@ -1,3 +1,7 @@
+Tor Browser 11.0a6 -- September 2 2021
+ * Android
+   * Bug 40611: Rebase geckoview patches onto 92.0b9 [tor-browser]
+
 Tor Browser 11.0a5 -- August 22 2021
  * All Platforms
    * Update Tor to 0.4.6.7
